[gd_scene load_steps=2 format=3 uid="uid://e5k6n8p1x4c0m"]

[ext_resource type="Script" path="res://scripts/ui/hr_dialog.gd" id="1_script"]

[node name="HRDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -320.0
offset_right = 500.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Human Resources"

[node name="Spacer" type="Control" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/VBox/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="TabContainer" type="TabContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Current Employees" type="ScrollContainer" parent="Panel/VBox/TabContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmployeesContainer" type="VBoxContainer" parent="Panel/VBox/TabContainer/Current Employees"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Hire New" type="VBoxContainer" parent="Panel/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="RoleSelection" type="HBoxContainer" parent="Panel/VBox/TabContainer/Hire New"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/TabContainer/Hire New/RoleSelection"]
layout_mode = 2
text = "Position:"

[node name="RoleDropdown" type="OptionButton" parent="Panel/VBox/TabContainer/Hire New/RoleSelection"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Spacer" type="Control" parent="Panel/VBox/TabContainer/Hire New/RoleSelection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GenerateBtn" type="Button" parent="Panel/VBox/TabContainer/Hire New/RoleSelection"]
layout_mode = 2
text = "Find Candidates"

[node name="CandidatesScroll" type="ScrollContainer" parent="Panel/VBox/TabContainer/Hire New"]
layout_mode = 2
size_flags_vertical = 3

[node name="CandidatesContainer" type="VBoxContainer" parent="Panel/VBox/TabContainer/Hire New/CandidatesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Footer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/VBox/Footer"]
layout_mode = 2
text = "Manage your workforce"

[connection signal="pressed" from="Panel/VBox/Header/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel/VBox/TabContainer/Hire New/RoleSelection/GenerateBtn" to="." method="_generate_candidates"]
